# only-tokens-smart-contracts

./: TESTING_GUIDE.md  test_all.sh
cosmos/htcl/: .env  .env.example  Cargo.toml  NOTICE  README.md
cosmos/htcl-contract/: Cargo.toml  README.md
cosmos/htcl-contract-2/: Cargo.toml  README.md
cosmos/htcl-contract-2/schema/: instantiate_msg.json
cosmos/htcl-contract-2/scripts/: deploy.sh
cosmos/htcl-contract-2/src/: contract.rs  msg.rs  state.rs
cosmos/htcl-contract-2/src/tests/: integration_tests.rs
cosmos/htcl-contract/scripts/: deploy.sh
cosmos/htcl-contract/src/: contract.rs  error.rs  msg.rs  state.rs
cosmos/htcl-contract/src/tests/: integration_tests.rs
dogecoin/: IMPLEMENTATION_SUMMARY.md  README.md  deploy.sh  htcl_example.py  htcl_script.py  htcl_transaction.py  requirements.txt  test_htcl.py
evm/: .gitignore  README.md  README_LIMIT_ORDER.md  deploy.html  hardhat.config.js  package-lock.json  package.json  test_limit_order_flow.js
evm/contracts/: HTCL.sol  LimitOrderProtocol.sol
evm/scripts/: deploy.js  deploy_all.js  deploy_limit_order.js  deploy_with_metamask.js  extract_artifacts.js
evm/test/: HTCL.test.js  LimitOrderProtocol.test.js
examples/: DOGECOIN_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md
examples/cosmos-evm/: README.md  alice_cosmos_script.py  alice_evm_withdraw.js  bob_cosmos_withdraw.py  bob_evm_script.js  deploy_and_test.sh  requirements.txt  shared_secret.py  test_flow.py
examples/dogecoin-evm/: README.md  alice_dogecoin_script.py  alice_evm_withdraw.js  bob_dogecoin_withdraw.py  shared_secret.py  (+3 more)
(+22 files in other folders)
