[package]
name = "htcl-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "1.5"
cosmwasm-std = "1.5"
cosmwasm-storage = "1.5"
cw-storage-plus = "1.2"
cw2 = "1.1"
cw20 = "0.21"
cw20-base = "0.21"
cw-utils = "1.1"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
sha2 = "0.10"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
cosmwasm-schema = "1.5"
cw-multi-test = "0.21" 